--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>lesson 6</title>
 </head>
 <body>
+    <section>
     <div class="img-back">
-        <img src="img/3319.jpg" alt="img1" class="img-city">
-        <div>
-            <img src="img/Blonde_Female_Driver_by_Merlin2525.svg" alt="car" class="car">
-       </div>
+        <img src="img/3319.jpg" alt="img1"  class="img-city">
+        <img src="img/Blonde_Female_Driver_by_Merlin2525.svg" alt="car" class="car">
+        <img src="img/rain.svg" alt="rain" class="rain">
     </div>
-  
+</section>
 </body>
 </html>
